--- a/TodoServerApplication/src/main/resources/application.yml
+++ b/TodoServerApplication/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   jpa:
-    show-sql: ture
+    show-sql: true
     hibernate:
       ddl-auto: none
     database-platform: org.hibernate.dialect.H2Dialect
